# vibe-marketing

./: .env.example  .env.local  .gitignore  .mcp.json  CLAUDE.md  Fitness_Focus_Groups_Marketing_Intelligence.docx  Fitness_Focus_Groups_Marketing_Intelligence.md  INSTALLATION_GUIDE.md  README.md  docker-compose.yml  ecosystem.config.cjs  external-services-registry.md  marketing-books.md  package-lock.json  package.json  pyproject.toml  vibe-marketing-platform-v3.md
.tldr/: daemon.pid
books/: $100M Offers_ How to Make Offers So Good People Feel Stupid -- Alex Hormozi.epub  Breakthrough Advertising -- Eugene M_ Schwartz, Eugene Schwartz.epub  Building a StoryBrand 2_0_ Clarify Your Message So Customers -- Donald Miller 2025.epub  Contagious_ Why Things Catch On.epub  Never Split the Difference_ Negotiating As If Your Life -- Voss, Chris & Raz, Tahl.epub  The Adweek Copywriting Handbook _ The Ultimate Guide to -- Joseph Sugarman -- 1, 2012.epub  The Boron Letters -- Halbert, Bond & Halbert, Gary -- 2013.epub
convex/: activities.ts  admin.ts  agents.ts  analytics.ts  auth.ts  campaigns.ts  channels.ts  contentBatches.ts  dashboard.ts  documents.ts  focusGroupStaging.ts  focusGroups.ts  mediaAssets.ts  messages.ts  notifications.ts  orchestrator.ts  pipeline.ts  pipelines.ts  products.ts  projects.ts  reports.ts  resourceHistory.ts  resources.ts  revisions.ts  schema.ts  seed.ts  seedServices.ts  services.ts  skillCategories.ts  skills.ts  tasks.ts  tsconfig.json
dashboard/: CONVEX_API_CATALOG.md  app.vue  nuxt.config.ts  package-lock.json  package.json  uno.config.ts  (+2 more)
(+924 files in other folders)
